2005-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc: remove -m, --no-layout

	* flower/include/libc-extension.hh: add ALIAS_FILE_TO_FILECOOKIE
	to define. We don't want to override fprintf everywhere.

2005-02-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/lilypond.hint: 
	* cygwin/README.in: Update dependencies.

	* stepmake/aclocal.m4 (STEPMAKE_PANGO, STEPMAKE_PANGO_FT2):
	Bugfix: do not pollute CPPFLAGS, LIBS.

	* cygwin/mknetrel (extras): Cross compile fixes.

	* ttftool/util.c: 
	* ttftool/ttfps.c: 
	* ttftool/ps.c: #include libc-extension.hh

	* flower/include/libc-extension.hh:
	* flower/libc-extension.cc (fopencookie)[!HAVE_FOPENCOOKIE]: Add
	wrapper using funopen.
	(fopencookie, handle_cookie_io_fclose, handle_cookie_io_fprintf,
	handle_cookie_io_fprintf): Add wrappers catching Memory_out_stream.

	* config.hh.in:
	* configure.in (AC_CHECK_FUNCS): Add fopencookie, funopen.
	(AC_CHECK_HEADERS): Add libio.h

	* scripts/convert-ly.py: Uniformize, internationalize.
	(2.5.2): Remove fatal encoding rule.
	(2.5.13): Handle latin1 encoding gracefully.

2005-02-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* HACKING: Fix line breaks.

2005-02-23  Werner Lemberg  <wl@gnu.org>

	* mf/graycx.mf, mf/graylj.mf: Removed.  Any decent TeX distribution
	contains those two files.

2005-02-21  Werner Lemberg  <wl@gnu.org>

	* mf/feta-nummer-code.mf ("Numeral 5"): Include intersection point
	to improve overlap removal process.

	* mf/feta-slag.mf (draw_trillelement): Add parameter to control
	left and right ending.  This ensures better overlapping.
	Update all callers.
	("lineprall"): Don't use draw_gridline to get better overlapping.

2005-02-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily-library.scm (ps-embed-cff): add \n after EndResource

	* Documentation/topdocs/NEWS.tely (Top): oops.

2005-02-21  Pedro Kroger  <kroeger@pedrokroeger.net>

	* HACKING: new file.

	* input/regression/utf8.ly (portuguese): added a portuguese example